--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,9 @@ ul{
   padding: 20px;
   font-size: 30px;
 }
+
+#but1,#but2,#but3,#but4,#but5,#but6{
+  border-radius: 15px;
+  font-size: 20px;
+  padding: 10px;
+}
