--- a/css/styles.css
+++ b/css/styles.css
@@ -68,4 +68,9 @@ ul{
 #results{
   float: left;
   margin-right: 50px;
+  font-family: 'Abril Fatface', cursive;
+font-family: 'Bree Serif', serif;
+font-family: 'Luckiest Guy', cursive;
+font-family: 'Playfair Display', serif;
+font-family: 'Staatliches', cursive;
 }
